--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="84a97d">  <td>23/04/12 22:14:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp()[pri:0, instance:testCases.TC_010_SubscriptionInHomePage@31ea9581]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1541525668</td>   <td></td> </tr>
-<tr bgcolor="6f76f3">  <td>23/04/12 22:14:21</td>   <td>8693</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_010_SubscriptionInHomePage.testSubscriptionInHomePage()[pri:0, instance:testCases.TC_010_SubscriptionInHomePage@31ea9581]">testSubscriptionInHomePage</td> 
-  <td>main@1541525668</td>   <td></td> </tr>
+<tr bgcolor="dac38f">  <td>23/04/14 22:13:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp()[pri:0, instance:testCases.TC_11_SubcriptionInCartPage@50378a4]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1160649162</td>   <td></td> </tr>
+<tr bgcolor="6e95ec">  <td>23/04/14 22:14:07</td>   <td>57198</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_11_SubcriptionInCartPage.testSubcriptionINCartPage()[pri:0, instance:testCases.TC_11_SubcriptionInCartPage@50378a4]">testSubcriptionINCartPage</td> 
+  <td>main@1160649162</td>   <td></td> </tr>
 </table>
